# qwebdavlib

./: CMakeLists.txt  QWebdavConfig.cmake.in  README  common-install.pri  qwebdavlib.pro
qwebdavlib/: CMakeLists.txt  qnaturalsort.cpp  qwebdav-qt5.cmake.pc.in  qwebdav-qt5.pc.in  qwebdav-qt6.cmake.pc.in  qwebdav-qt6.pc.in  qwebdav.cpp  qwebdavdirparser.cpp  qwebdavdirparser.h  qwebdavitem.cpp  qwebdavitem.h  qwebdavlib.pri  qwebdavlib.pro
qwebdavlibExample/: CMakeLists.txt  qwebdavlibExample.pro
